--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,6 @@
   "scope": "/train-car-logger/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#f1f5f9",
-  "theme_color": "#f1f5f9"
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff"
 }
