--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,5 +7,13 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff"
+  "theme_color": "#ffffff",
+  "icons": [
+    {
+      "src": "/train-car-logger/img/icon.svg",
+      "purpose": "maskable any",
+      "type": "image/svg+xml",
+      "sizes": "any"
+    }
+  ]
 }
